refactored for github static page. Also, fixed large gap left between cards when there are not enough cards to fill an entire row

--- a/src/main/webapp/pub/css/adopt.css
+++ b/src/main/webapp/pub/css/adopt.css
@@ -221,9 +221,10 @@ main {
 #cards {
     display: flex;
     flex-wrap: wrap;;
-    justify-content: space-between;
+    justify-content: start;
     gap: 10px;
-    row-gap: 50px;
+    row-gap: 50px ;
+    align-content: flex-start;
 }
 
 /*.card-outline{*/
